--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "await-to-js": "^2.0.1",
+    "axios": "^0.18.0",
     "command-exists": "^1.2.8",
     "moment": "^2.22.2"
   },
