tsconfig: add es7 lib support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "lib": [
+      "es7"
+    ],
 		"moduleResolution": "node",
 		"noImplicitAny": false,
 		"removeComments": false,
